[tool.poetry]
name = "pymg"
version = "0.1.0"
description = ""
authors = ["Oleg Golibroda <oleg.golibroda@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.8"
uvicorn = "^0.30.5"
starlette = "^0.38.2"
pyinstaller = "^6.10.0"
baize = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
